# XGBT

./: .gitignore  config.yaml  pyproject.toml  train.py
docs/: README.md
tests/: test_config.py  test_data_loading_and_temporal.py  test_drift_monitor.py  test_feature_inference.py  test_monitoring_reports.py  test_serving.py  test_smoke_training.py  test_thresholds.py
xgb_prototype/: __init__.py  _render.py  baselines.py  config.py  data.py  deps.py  drift_monitor.py  evaluation.py  features.py  inference.py  metrics.py  pipeline.py  plots.py  settings.py  temp.py  thresholds.py  tracking.py  train.py  uncertainty.py
