[project]
name = "xgb-prototype"
version = "0.1.0"
description = "Reproducible XGBoost ML prototype"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    "optuna>=4.8.0",
    "great-expectations>=1.16.0",
    "matplotlib>=3.10.8",
    "plotly>=6.7.0",
    "omegaconf>=2.3.0",
    "mlflow>=3.11.1",
    "pandera>=0.31.1",
    "polars>=1.40.1",
]

[project.scripts]
xgb-prototype-train = "xgb_prototype:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
